[package]
name = "staking"
version = "0.1.0"
description = "Solana staking smart contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "1.18.0"
tokio = { version = "1.38.0", features = ["macros"] }